objects/SFMC_Subscriber__c/SFMC_Subscriber__c.object-meta.xml
<CustomObject>
    <label>Subscriber (SFMC)</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Subscribers (SFMC)</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>