objects/SFMC_Subscriber__c/fields/Bounces__c.field-meta.xml
<CustomField>
    <fullName>Bounces__c</fullName>
    <label>Bounces</label>
    <summaryForeignKey>SFMC_Bounce__c.Subscriber_SFMC__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>