objects/SFMC_Subscriber__c/fields/Opens__c.field-meta.xml
<CustomField>
    <fullName>Opens__c</fullName>
    <label>Opens</label>
    <summaryForeignKey>SFMC_Open__c.Subscriber_SFMC__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>