objects/SFMC_Subscriber__c/fields/Sents__c.field-meta.xml
<CustomField>
    <fullName>Sents__c</fullName>
    <label>Sents</label>
    <summaryForeignKey>SFMC_Sent__c.Subscriber_SFMC__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>