objects/SFMC_Subscriber__c/fields/Subscriber_Id__c.field-meta.xml
<CustomField>
    <fullName>Subscriber_Id__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>Subscriber Id</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>