objects/SFMC_Subscriber__c/fields/Subscriber_Key__c.field-meta.xml
<CustomField>
    <fullName>Subscriber_Key__c</fullName>
    <externalId>true</externalId>
    <label>Subscriber Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>