objects/SFMC_Subscriber__c/fields/Unique_Clicks__c.field-meta.xml
<CustomField>
    <fullName>Unique_Clicks__c</fullName>
    <label>Unique Clicks</label>
    <summaryFilterItems>
        <field>SFMC_Click__c.Is_Unique__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>SFMC_Click__c.Subscriber_SFMC__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>